--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="time" id="time">--:--:--</div>
             <div class="date" id="date">--/--/----</div>
         </div>
-        <a href="" id="trang-chu"><i class="fa-solid fa-house"></i>Trang chủ</a>
+        <a href="https://quoctram.github.io/Website/" id="trang-chu"><i class="fa-solid fa-house"></i>Trang chủ</a>
         <a href="./code/on-tap.html" id="on-tap"><i class="fa-solid fa-graduation-cap"></i>Ôn tập</a>
     </div>
     <!-- tạo các các ô trạng thái  -->
