--- a/code/tieng-anh/tieng-anh.html
+++ b/code/tieng-anh/tieng-anh.html
@@ -18,134 +18,9 @@
     />
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../style2.css">
     <style>
-      @media only screen and (max-width: 600px) {
-        #icon {
-          height: 5vh;
-          width: 75vw;
-          padding-top: 3%;
-          text-align: center;
-          margin-top: 2%;
-          border: 1rem double rgb(235, 187, 255);
-          background-color: black;
-          border-radius: 99.9rem;
-          box-shadow: 0rem 0rem 3rem azure;
-        }
-        #trang-chu,
-        #on-tap {
-          width: 100vw;
-          text-decoration: none;
-          font-size: 1.5rem;
-          color: aquamarine;
-          margin-right: 1vw;
-        }
-        .question-container {
-          flex-direction: column; /* Hiển thị dọc */
-          align-items: center;
-          gap: 2rem;
-        }
-
-        .font {
-          font-size: 2rem;
-          width: 80%;
-          text-align: center;
-        }
-
-        .btn-group {
-          flex-direction: column;
-          width: 80%;
-          align-items: center;
-        }
-
-        .btn {
-          width: 120%;
-        }
-        .font {
-          font-size: 4rem !important;
-          font-weight: bold;
-          color: #46a7e3;
-          border: 1px solid aliceblue;
-          border-radius: 99.9rem;
-          padding: 0.5rem 1rem;
-          display: inline-block;
-          background-color: rgba(0, 0, 0, 0.5);
-          box-shadow: 5px 5px 15px rgba(241, 147, 243, 0.8);
-          border-color: aliceblue;
-        }
-
-        .btn {
-          background-color: #f6c;
-          color: aliceblue;
-          border: none;
-          padding: 9px 15px;
-          border-radius: 2rem;
-          cursor: pointer;
-          box-shadow: 0 4px 8px;
-          text-align: center;
-          width: 80px;
-          font-size: 1.7rem !important;
-        }
-        .btn:hover {
-          transform: scale(1.05);
-          transition: all 0.3s ease-in-out;
-        }
-      }
-      /* máy tính  */
-
-      .question-container {
-        display: flex;
-        justify-content: center;
-        gap: 5rem;
-        margin-top: 3rem;
-      }
-
-      .question-block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      .btn-group {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        margin-top: 1rem;
-      }
-
-      .font {
-        font-size: 5rem;
-        font-weight: bold;
-        color: #46a7e3;
-        border: 3px solid;
-        border-radius: 99.9rem;
-        padding: 0.6rem;
-        display: inline-block;
-        background-color: rgba(0, 0, 0, 0.5);
-        box-shadow: 10px 10px 20px rgba(241, 147, 243, 0.8);
-        border-color: aliceblue;
-        
-      }
-
-      .btn {
-        background-color: #f6c;
-        color: aliceblue;
-        border: none;
-        padding: 15px 30px;
-        font-size: 1.5rem;
-        border-radius: 2rem;
-        cursor: pointer;
-        box-shadow: 0 4px 8px;
-        font-weight: bold;
-        text-align: center;
-        width: 120px;
-      }
-
-      .btn:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px rgba(255, 105, 180, 0.6);
-        transition: all 0.3s ease;
-      }
+      
     </style>
     <title>Tiếng Anh</title>
   </head>
@@ -185,7 +60,7 @@
         </div>
       </div>
     </div>
-<!--đồng hồ-->
+    <!--đồng hồ-->
     <div class="clock">
       <div class="time" id="time">--:--:--</div>
       <div class="date" id="date">--/--/----</div>
