--- a/code/vat-ly/vat-ly.html
+++ b/code/vat-ly/vat-ly.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Lobster&family=Moo+Lah+Lah&family=Rubik+Gemstones&family=Yesteryear&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../style2.css">
     <style>
         @media only screen and (max-width:600px){
             #icon {
@@ -49,6 +50,31 @@
         <a href="../../index.html" id="trang-chu"><i class="fa-solid fa-house"></i>Trang chủ</a>
         <a href="../on-tap.html" id="on-tap"><i class="fa-solid fa-graduation-cap"></i>Ôn tập</a>
     </div>
+    <div class="question-container">
+        <div class="question-block">
+          <h1 class="font">Trắc Nghiệm</h1>
+          <div class="btn-group">
+            <div class="btn">Link 1</div>
+            <div class="btn">Link 2</div>
+          </div>
+        </div>
+  
+        <div class="question-block">
+          <h1 class="font">Trả Lời Ngắn</h1>
+          <div class="btn-group">
+            <div class="btn">Link 1</div>
+            <div class="btn">Link 2</div>
+          </div>
+        </div>
+  
+        <div class="question-block">
+          <h1 class="font">Đúng Sai</h1>
+          <div class="btn-group">
+            <div class="btn">Link 1</div>
+            <div class="btn">Link 2</div>
+          </div>
+        </div>
+      </div>
     <div class="clock">
         <div class="time" id="time">--:--:--</div>
         <div class="date" id="date">--/--/----</div>
