--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -39,7 +39,7 @@
         <div class="question-block">
           <h1 class="font">Trắc Nghiệm</h1>
           <div class="btn-group">
-            <div class="btn"><a href="../../bao-loi.html">Link 1</a></div>
+            <div class="btn"><a class="a" href="../../bao-loi.html">Link 1</a></div>
             <div class="btn">Link 2</div>
           </div>
         </div>
