--- a/bao-loi.html
+++ b/bao-loi.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        h1{
-            color: red;
-        }
-    </style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="bao-loi.css" />
+    <link rel="stylesheet" href="https://fontawesome.com/icons" />
+    <style></style>
     <title>Document</title>
-</head>
-<body>
-    <h1>Không có gì trong đây cả <strong><em><u>LÊU LÊU</u></em></strong> :)))))))))))))))</h1>
-</body>
+  </head>
+  <body>
+    <div class="background-section"></div>
+    <h1 class="h1"><strong><em>Lỗi Rồi "Hiện Tại Chưa Có Nội Dung" </em></strong></h1>
+  </body>
 </html>
