--- a/bao-loi.html
+++ b/bao-loi.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div class="background-section"></div>
-    <h1 class="h1"><strong><em>Lỗi Rồi "Hiện Tại Chưa Có Nội Dung" </em></strong></h1>
+    <h1 class="h1">
+      <strong><em> ⚠️ Lỗi Rồi "Hiện Tại Chưa Có Nội Dung" 🆘</em></strong>
+    </h1>
   </body>
 </html>
