--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <p class="p_0 p6">Gdkt&pl</p>
     </div>
     <div class="box5">
-        <p class="p_1 p7">Chưa hoàn thành</p>
-        <p class="p_1 p8">Chưa hoàn thành</p>
-        <p class="p_1 p9">Chưa hoàn thành</p>
-        <p class="p_1 p10">Chưa hoàn thành</p>
-        <p class="p_1 p11">Chưa hoàn thành</p>
-        <p class="p_1 p12">Chưa hoàn thành</p>
+        <p class="p_1 p7">Chưa hoàn thành❌</p>
+        <p class="p_1 p8">Chưa hoàn thành❌</p>
+        <p class="p_1 p9">Chưa hoàn thành❌</p>
+        <p class="p_1 p10">Đã Hoàn Thành✅ </p>
+        <p class="p_1 p11">Chưa hoàn thành❌</p>
+        <p class="p_1 p12">Chưa hoàn thành❌</p>
     </div>
     <div class="clock1">
         <div class="time1" id="time1">--:--:--</div>
