--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -39,15 +39,15 @@
         <div class="question-block">
           <h1 class="font">Trắc Nghiệm</h1>
           <div class="btn-group">
-            <div class="btn"><a class="a" href="../../bao-loi.html">Link 1</a></div>
-            <div class="btn">Link 2</div>
+            <div class="btn"><a href="#">Link 1</a></div>
+            <div class="btn"><a href="#">Link 2</a></div>
           </div>
         </div>
   
         <div class="question-block">
           <h1 class="font">Trả Lời Ngắn</h1>
           <div class="btn-group">
-            <div class="btn">Link 1</div>
+            <div class="btn"><a href="#">Link 1</a></div>
             <div class="btn">Link 2</div>
           </div>
         </div>
