--- a/code/gdktpt/gdktpl.html
+++ b/code/gdktpt/gdktpl.html
@@ -70,7 +70,7 @@
         <div class="question-block">
           <h1 class="font">Đúng Sai</h1>
           <div class="btn-group">
-            <div class="btn">Link 1</div>
+            <div class="btn"> <a href="https://quizizz.com/admin/presentation/67dcfc2dace618ddf20e82f4?created=true">Link 1</a></div>
             <div class="btn">Link 2</div>
           </div>
         </div>
