--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -19,10 +19,8 @@
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="../../style2.css" />
-   
-    <style>
-      
-    </style>
+
+    <style></style>
     <title>Địa lý</title>
   </head>
   <body>
@@ -36,30 +34,31 @@
       >
     </div>
     <div class="question-container">
-        <div class="question-block">
-          <h1 class="font">Trắc Nghiệm</h1>
-          <div class="btn-group">
-            <div class="btn"><a href="#">Link 1</a></div>
-            <div class="btn"><a href="#">Link 2</a></div>
-          </div>
-        </div>
-  
-        <div class="question-block">
-          <h1 class="font">Trả Lời Ngắn</h1>
-          <div class="btn-group">
-            <div class="btn"><a href="#">Link 1</a></div>
-            <div class="btn">Link 2</div>
-          </div>
-        </div>
-  
-        <div class="question-block">
-          <h1 class="font">Đúng Sai</h1>
-          <div class="btn-group">
-            <div class="btn">Link 1</div>
-            <div class="btn">Link 2</div>
-          </div>
+      <div class="question-block">
+        <h1 class="font">Trắc Nghiệm</h1>
+        <div class="btn-group">
+          <div class="btn">link 1</div>
+          <div class="btn">link 2</div>
         </div>
       </div>
+
+      <div class="question-block">
+        <h1 class="font">Trả Lời Ngắn</h1>
+        <div class="btn-group">
+          <div class="btn">link 1</div>
+          <div class="btn">Link 2</div>
+        </div>
+      </div>
+
+      <div class="question-block">
+        <h1 class="font">Đúng Sai</h1>
+        <div class="btn-group">
+          <div class="btn">Bài 19+20+21 <a href="https://quizizz.com/join?gc=27301752">Link 1</a></div>
+          <div class="btn">Bài 22+23+24 <a href="https://quizizz.com/join?gc=60659576">Link 2</a></div>
+          <div class="btn">Bài 25+26 Link 3</div>
+        </div>
+      </div>
+    </div>
     <div class="clock">
       <div class="time" id="time">--:--:--</div>
       <div class="date" id="date">--/--/----</div>
