--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -53,9 +53,14 @@
       <div class="question-block">
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
-          <div class="btn">Bài 19+20+21 <a href="https://quizizz.com/join?gc=27301752">Link 1</a></div>
-          <div class="btn">Bài 22+23+24 <a href="https://quizizz.com/join?gc=60659576">Link 2</a></div>
-          <div class="btn">Bài 25+26 Link 3</div>
+          <div class="btn">
+            Bài 19+20+21
+            <a href="https://quizizz.com/join?gc=27301752">Link 1</a>
+          </div>
+          <div class="btn">
+            Bài 22+23+24
+            <a href="https://quizizz.com/join?gc=60659576">Link 2</a>
+          </div>
         </div>
       </div>
     </div>
