--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <p class="p_1 p8">Chưa hoàn thành❌</p>
       <p class="p_1 p9">Chưa hoàn thành❌</p>
       <p class="p_1 p10">Đã Hoàn Thành✅</p>
-      <p class="p_1 p11">Chưa hoàn thành❌</p>
-      <p class="p_1 p12">Chưa hoàn thành❌</p>
+      <p class="p_1 p11">Đã Hoàn Thành✅ 30%</p>
+      <p class="p_1 p12">Đã Hoàn Thành✅ 50%</p>
     </div>
     <div class="clock1">
       <div class="time1" id="time1">--:--:--</div>
