--- a/code/tieng-anh/tieng-anh.html
+++ b/code/tieng-anh/tieng-anh.html
@@ -18,10 +18,8 @@
     />
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../../style.css" />
-    <link rel="stylesheet" href="../../style2.css">
-    <style>
-      
-    </style>
+    <link rel="stylesheet" href="../../style2.css" />
+    <style></style>
     <title>Tiếng Anh</title>
   </head>
   <body>
@@ -39,24 +37,14 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn">Link 1</div>
-          <div class="btn">Link 2</div>
-        </div>
-      </div>
-
-      <div class="question-block">
-        <h1 class="font">Trả Lời Ngắn</h1>
-        <div class="btn-group">
-          <div class="btn">Link 1</div>
-          <div class="btn">Link 2</div>
-        </div>
-      </div>
-
-      <div class="question-block">
-        <h1 class="font">Đúng Sai</h1>
-        <div class="btn-group">
-          <div class="btn">Link 1</div>
-          <div class="btn">Link 2</div>
+          <div class="btn">
+            Đề 1 <br />
+            Link 1
+          </div>
+          <div class="btn">
+            Đề 2 <br />
+            Link 2
+          </div>
         </div>
       </div>
     </div>
