--- a/code/lich-su/lich-su.html
+++ b/code/lich-su/lich-su.html
@@ -67,15 +67,19 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn">Link 1</div>
-          <div class="btn">Link 2</div>
+          <div class="btn">Câu 1-45 <br> <a href="https://quizizz.com/join?gc=02034936">Link 1</a></div>
+          <div class="btn">
+            Câu 46-90 <br /><a href="https://quizizz.com/join?gc=48166136"
+              >Link 2</a
+            >
+          </div>
         </div>
       </div>
 
       <div class="question-block">
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
-          <div class="btn">Link 1</div>
+          <div class="btn"> <a href="https://quizizz.com/join?gc=27790584">Link 1</a> (8 câu) </div>
           <div class="btn">Link 2</div>
         </div>
       </div>
