--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -37,7 +37,7 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn"><a href="https://quizizz.com/join?gc=24682424">link 1</a></div>
+          <div class="btn"><a href="https://quizizz.com/join/quiz/67d616dd814e3a7a8925412a/start?studentShare=true">link 1</a></div>
           <div class="btn">link 2</div>
         </div>
       </div>
