--- a/code/tieng-anh/tieng-anh.html
+++ b/code/tieng-anh/tieng-anh.html
@@ -38,12 +38,20 @@
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
           <div class="btn">
-            Đề 1 <br />
-            Link 1
+            Đề 1 <br /><a
+              href="https://docs.google.com/forms/d/e/1FAIpQLScnMxdnygVnBy5ThoyJeEYyt8vwSHRoPGBc0L1r0nIr_YRFLA/viewform?usp=header&usp=embed_facebook"
+              >Link 1</a
+            >
           </div>
           <div class="btn">
             Đề 2 <br />
-            Link 2
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSehgLEtSVvWMybTphfaunPqxT-EW17O9-lu85GQb1WhWYZVQg/viewform?usp=header&usp=embed_facebook">Link 2</a>
+          </div>
+          <div class="btn">
+            Đề 3 <br /><a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeQ2aBom4d1zb2Ch9e94GN3rGgtLnSoa9FaUpZrXo8ZtDJbgw/viewform?usp=header&usp=embed_facebook"
+              >Link 3</a
+            >
           </div>
         </div>
       </div>
