--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <p class="p_0 p6">Gdkt&pl</p>
     </div>
     <div class="box5">
-      <p class="p_1 p7">Chưa hoàn thành❌</p>
+      <p class="p_1 p7">Đã Hoàn Thành✅ 100%</p>
       <p class="p_1 p8">Đã Hoàn Thành✅ 100%</p>
       <p class="p_1 p9">Đã Hoàn Thành✅ 50%</p>
       <p class="p_1 p10">Đã Hoàn Thành✅ 100%</p>
