--- a/code/lich-su/lich-su.html
+++ b/code/lich-su/lich-su.html
@@ -79,7 +79,7 @@
       <div class="question-block">
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
-          <div class="btn"> <a href="https://quizizz.com/join?gc=27790584">Link 1</a> (8 câu) </div>
+          <div class="btn"> <a href="">Link 1</a> (8 câu) </div>
           <div class="btn">Link 2</div>
         </div>
       </div>
