--- a/code/lich-su/lich-su.html
+++ b/code/lich-su/lich-su.html
@@ -67,10 +67,9 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn">Câu 1-45 <br> <a href="https://quizizz.com/join?gc=02034936">Link 1</a></div>
+          <div class="btn"><a href="https://quizizz.com/join?gc=57128756">Link 1</a></div>
           <div class="btn">
-            Câu 46-90 <br /><a href="https://quizizz.com/join?gc=48166136"
-              >Link 2</a
+            Link 2</a
             >
           </div>
         </div>
@@ -79,7 +78,7 @@
       <div class="question-block">
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
-          <div class="btn"> <a href="https://quizizz.com/join?gc=50823672">Link 1</a> (8 câu) </div>
+          <div class="btn">Link 1</a></div>
           <div class="btn">Link 2</div>
         </div>
       </div>
