--- a/code/tin-hoc/tinhoc.html
+++ b/code/tin-hoc/tinhoc.html
@@ -68,8 +68,8 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn">Biểu Mẫu <a href="https://forms.gle/AxZXCuZ24iJ4bwTi9">Link 1</a></div>
-          <div class="btn">Quizi <a href="https://quizizz.com/join?gc=44513144">Link 2</a></div>
+          <div class="btn">Biểu Mẫu <a href="https://forms.gle/xpD1GCMMzmbo4UyG6">Link 1</a></div>
+          <div class="btn">Biểu Mẫu <a href="https://forms.gle/ZLtvtwftX92wJBx68">Link 2</a></div>
         </div>
       </div>
 
@@ -84,7 +84,7 @@
       <div class="question-block">
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
-          <div class="btn"><a href="https://quizizz.com/join?gc=21362552">Link 1</a></div>
+          <div class="btn">Link 1</a></div>
           <div class="btn">Link 2</div>
         </div>
       </div>
