--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
       <p class="p_0 p6">Gdkt&pl</p>
     </div>
     <div class="box5">
-      <p class="p_1 p7">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p8">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p9">Đã Hoàn Thành✅ 100%</p>
+      <p class="p_1 p7">Chưa Hoàn Thành❌ 0%</p>
+      <p class="p_1 p8">Chưa Hoàn Thành❌ 0%</p>
+      <p class="p_1 p9">Chưa Hoàn Thành❌ 0%</p>
       <p class="p_1 p10">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p11">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p12">Đã Hoàn Thành✅ 100%</p>
+      <p class="p_1 p11">Chưa Hoàn Thành❌ 0%</p>
+      <p class="p_1 p12">Chưa Hoàn Thành❌ 0%</p>
     </div>
     <div class="clock1">
       <div class="time1" id="time1">--:--:--</div>
