--- a/code/gdktpt/gdktpl.html
+++ b/code/gdktpt/gdktpl.html
@@ -67,7 +67,7 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn"> <a href="https://quizizz.com/join?gc=03686916">Link 1</a></div>
+          <div class="btn">Link 1</a></div>
           <div class="btn">Link 2</div>
         </div>
       </div>
@@ -76,7 +76,7 @@
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
           <div class="btn">
-            <a href="https://quizizz.com/join?gc=02451320">Link 1</a>
+            Link 1</a>
           </div>
           <div class="btn">Link 2</div>
         </div>
