--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <p class="p_1 p9">Chưa Hoàn Thành❌ 0%</p>
       <p class="p_1 p10">Đã Hoàn Thành✅ 100%</p>
       <p class="p_1 p11">Chưa Hoàn Thành❌ 0%</p>
-      <p class="p_1 p12">Chưa Hoàn Thành❌ 0%</p>
+      <p class="p_1 p12">Đã Hoàn Thành✅ 100%</p>
     </div>
     <div class="clock1">
       <div class="time1" id="time1">--:--:--</div>
