--- a/code/gdktpt/gdktpl.html
+++ b/code/gdktpt/gdktpl.html
@@ -67,7 +67,7 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn"><a href="https://quizizz.com/join?gc=21845684"></a>Link 1</a></div>
+          <div class="btn"><a href="https://quizizz.com/join?gc=21845684">Link 1</a></a></div>
           <div class="btn">Link 2</div>
         </div>
       </div>
@@ -75,8 +75,8 @@
       <div class="question-block">
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
-          <div class="btn"><a href="https://quizizz.com/join?gc=53884596"></a>
-            Link 1</a>
+          <div class="btn"><a href="https://quizizz.com/join?gc=53884596">Link 1</a>
+            </a>
           </div>
           <div class="btn">Link 2</div>
         </div>
