--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -54,12 +54,12 @@
         <h1 class="font">Đúng Sai</h1>
         <div class="btn-group">
           <div class="btn">
-            Bài 19+20+21 
-            <a href="">Link 1</a>
+             
+            Link 1
           </div>
           <div class="btn">
-            Bài 22+23+24
-            <a href="">Link 2</a>
+            
+            Link 2
           </div>
         </div>
       </div>
