--- a/code/vat-ly/vat-ly.html
+++ b/code/vat-ly/vat-ly.html
@@ -70,7 +70,7 @@
         <div class="question-block">
           <h1 class="font">Đúng Sai</h1>
           <div class="btn-group">
-            <div class="btn">Link 1</div>
+            <div class="btn"><a href="https://quizizz.com/join?gc=33139124">Link 1</a></div>
             <div class="btn">Link 2</div>
           </div>
         </div>
