--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
     </div>
     <div class="box5">
       <p class="p_1 p7">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p8">Chưa Hoàn Thành❌ 0%</p>
-      <p class="p_1 p9">Chưa Hoàn Thành❌ 0%</p>
+      <p class="p_1 p8">Đã Hoàn Thành✅ 40%</p>
+      <p class="p_1 p9">Đã Hoàn Thành✅ 50%</p>
       <p class="p_1 p10">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p11">Chưa Hoàn Thành❌ 0%</p>
+      <p class="p_1 p11">Làm rồi nhưng chưa có đ.án</p>
       <p class="p_1 p12">Đã Hoàn Thành✅ 100%</p>
     </div>
+    
     <div class="clock1">
       <div class="time1" id="time1">--:--:--</div>
       <div class="date1" id="date1">--/--/----</div>
