--- a/code/dia-ly/dia-ly.html
+++ b/code/dia-ly/dia-ly.html
@@ -37,7 +37,7 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn">link 1</a></div>
+          <div class="btn"><a href="https://quizizz.com/join?gc=27236468">link 1</a></div>
           <div class="btn">link 2</div>
         </div>
       </div>
@@ -55,7 +55,7 @@
         <div class="btn-group">
           <div class="btn">
              
-            Link 1
+            <a href="https://quizizz.com/join?gc=34969716">Link 1</a>
           </div>
           <div class="btn">
             
