--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <p class="p_1 p8">Đã Hoàn Thành✅ 40%</p>
       <p class="p_1 p9">Đã Hoàn Thành✅ 50%</p>
       <p class="p_1 p10">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p11">Làm rồi nhưng chưa có đ.án</p>
+      <p class="p_1 p11">Đã Hoàn Thành✅ 100%</p>
       <p class="p_1 p12">Đã Hoàn Thành✅ 100%</p>
     </div>
     
