--- a/code/vat-ly/vat-ly.html
+++ b/code/vat-ly/vat-ly.html
@@ -54,7 +54,7 @@
         <div class="question-block">
           <h1 class="font">Trắc Nghiệm</h1>
           <div class="btn-group">
-            <div class="btn">Link 1</a></div>
+            <div class="btn"><a href="https://forms.gle/WSJJvp1bg2gXmMk86">Link 1</a></div>
             <div class="btn">Link 2</div>
           </div>
         </div>
