--- a/code/vat-ly/vat-ly.html
+++ b/code/vat-ly/vat-ly.html
@@ -54,8 +54,8 @@
         <div class="question-block">
           <h1 class="font">Trắc Nghiệm</h1>
           <div class="btn-group">
-            <div class="btn"><a href="https://forms.gle/WSJJvp1bg2gXmMk86">Link 1</a></div>
-            <div class="btn">Link 2</div>
+            <div class="btn">B.mẫu <a href="https://forms.gle/WSJJvp1bg2gXmMk86">Link 1</a></div>
+            <div class="btn">Quizii <a href="https://quizizz.com/join?gc=62092916">Link 2</a></div>
           </div>
         </div>
   
