--- a/code/lich-su/lich-su.html
+++ b/code/lich-su/lich-su.html
@@ -67,10 +67,8 @@
       <div class="question-block">
         <h1 class="font">Trắc Nghiệm</h1>
         <div class="btn-group">
-          <div class="btn"><a href="https://quizizz.com/join?gc=57128756">Link 1</a></div>
-          <div class="btn">
-            Link 2</a
-            >
+          <div class="btn"><a href="https://quizizz.com/join?gc=66879860">Link 1</a></div>
+          <div class="btn">Link 2</a>
           </div>
         </div>
       </div>
