--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="box5">
       <p class="p_1 p7">Đã Hoàn Thành✅ 100%</p>
-      <p class="p_1 p8">Tự Ônnn</p>
+      <p class="p_1 p8">Đã Hoàn Thành 10000% 😁</p>
       <p class="p_1 p9">Đã Hoàn Thành✅ 100%</p>
       <p class="p_1 p10">Đã Hoàn Thành✅ 100%</p>
       <p class="p_1 p11">Đã Hoàn Thành✅ 100%</p>
