--- a/code/vat-ly/vat-ly.html
+++ b/code/vat-ly/vat-ly.html
@@ -62,8 +62,8 @@
         <div class="question-block">
           <h1 class="font">Trả Lời Ngắn</h1>
           <div class="btn-group">
-            <div class="btn">Link 1</div>
-            <div class="btn">Link 2</div>
+            <div class="btn"><p class="haha">TLN không đúng đâu nên khỏi ôn </p></div>
+            <div class="btn"><p class="haha">CHÚC MẤY FEN THI TỐT NHAAA!!!</p></div>
           </div>
         </div>
   
